# points-table-simulator

./: README.md  enable_venv.sh  pyproject.toml  setup.cfg
.github/scripts/: quality_checks.sh  setup_environment.sh
.github/workflows/: create_venv.yml  publish.yml  quality_check.yaml  quality_check.yml
src/points_table_simulator/: exceptions.py  points_table_simulator.py
tests/points_table_simulator_tests/: SuccessTests.py  error_tests.py  success_tests.py
