[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
lines_between_sections=0
multi_line_output = 3

[tool.pylint]
max-line-length=160
min-public-methods=1

[tool.pytest.ini_options]
python_classes="*Tests"
python_files=["*Tests.py", "*tests.py"]
pythonpath = [
    "src"
]
testpaths=["tests"]
